<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/result_background"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_invitationresult_main"
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher" />

            <View
                android:id="@+id/view1"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#c6a42d" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" >

                    <TextView
                        android:id="@+id/tv_content"
                        style="@style/MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/tv_content" />

                    <Spinner
                        android:id="@+id/spin_invitaionresult_content"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/relativeLayout1" >

                    <TextView
                        android:id="@+id/tv_time"
                        style="@style/MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/edt_invitaionresult_time"
                        android:layout_alignBottom="@+id/edt_invitaionresult_time"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/tv_time" />

                    <EditText
                        android:id="@+id/edt_invitaionresult_time"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/relativeLayout2" >

                    <TextView
                        android:id="@+id/tv_address"
                        style="@style/MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/edt_invitation_location"
                        android:layout_alignBottom="@+id/edt_invitation_location"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/tv_address" />

                    <EditText
                        android:id="@+id/edt_invitation_location"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout4" >

                    <Button
                        android:id="@+id/btn_invitationresult_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="50dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/btn_invitationresult_save" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>